--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v2.0.8'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.assertj:assertj-android:1.0.0'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 }
